--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,13 +1,37 @@
 $prefix: "../../";
-$bg__error-img: $prefix+"img/error.jpg";
+$bg__about-img: 
+    $prefix+"img/about/about-s1.jpg",
+    $prefix+"img/about/about-s2.jpg",
+    $prefix+"img/about/about-s3.jpg";
 $bg__comingsoon-img: $prefix+"img/coming.jpg";
+$bg__contact-img: 
+    $prefix+"img/contact/contact-s1.jpg",
+    $prefix+"img/contact/contact-s2.jpg";
+$bg__error-img: $prefix+"img/error.jpg";
+$bg__index-img: $prefix+"img/index/index-s1.jpg";
+$bg__login-img: $prefix+"img/login/login-s1.jpg";
 $bg__privacy-img: $prefix+"img/privacy.jpg";
+$bg__products-img: 
+    $prefix+"img/products/products-s1.jpg",
+    "",
+    $prefix+"img/products/products-s3.jpg";
 $bg__init:
-    "error",
+    "about",
     "comingsoon",
-    "privacy";
+    "contact",
+    "error",
+    "index",
+    "login",
+    "privacy",
+    "products";
 $classes_init:
-    $bg__error-img,
+    $bg__about-img,
     $bg__comingsoon-img,
-    $bg__privacy-img;
+    $bg__contact-img,
+    $bg__error-img,
+    $bg__index-img,
+    $bg__login-img,
+    $bg__privacy-img,
+    $bg__products-img;
 $footer-height: 57px;
+$text__shadow: 1px 1px 3px #333;
